--- a/project_2_file/waj.py/data.ipynb
+++ b/project_2_file/waj.py/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\admin\\anaconda3\\lib\\site-packages\\openpyxl\\styles\\stylesheet.py:226: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
+      "c:\\Users\\admin\\AppData\\Local\\anaconda3\\envs\\gj_202304\\lib\\site-packages\\openpyxl\\styles\\stylesheet.py:226: UserWarning: Workbook contains no default style, apply openpyxl's default\n",
       "  warn(\"Workbook contains no default style, apply openpyxl's default\")\n"
      ]
     }
@@ -29,28 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 21 entries, 0 to 20\n",
-      "Columns: 1270 entries, 시군구별(1) to 2022.4/4.65\n",
-      "dtypes: object(1270)\n",
-      "memory usage: 208.5+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "i.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -608,8 +587,8 @@
        "</div>"
       ],
       "text/plain": [
-       "    시군구별(1) 2018.1/4   2018.1/4.1 2018.1/4.2 2018.1/4.3   2018.1/4.4  \\\n",
-       "0   시군구별(1)       전체           전체         전체         의사           의사   \n",
+       "    시군구별(1) 2018.1/4   2018.1/4.1 2018.1/4.2 2018.1/4.3   2018.1/4.4   \n",
+       "0   시군구별(1)       전체           전체         전체         의사           의사  \\\n",
        "1   시군구별(1)       소계           소계         소계         소계           소계   \n",
        "2   시군구별(1)     원데이터  전년말분기 대비 증감        증감률       원데이터  전년말분기 대비 증감   \n",
        "3        전체   232211          NaN        NaN     101060          NaN   \n",
@@ -631,8 +610,8 @@
        "19       경남    13185          NaN        NaN       5421          NaN   \n",
        "20       제주     2681          NaN        NaN       1139          NaN   \n",
        "\n",
-       "   2018.1/4.5 2018.1/4.6   2018.1/4.7 2018.1/4.8  ... 2022.4/4.56 2022.4/4.57  \\\n",
-       "0          의사         의사           의사         의사  ...         한약사       물리치료사   \n",
+       "   2018.1/4.5 2018.1/4.6   2018.1/4.7 2018.1/4.8  ... 2022.4/4.56 2022.4/4.57   \n",
+       "0          의사         의사           의사         의사  ...         한약사       물리치료사  \\\n",
        "1          소계        일반의          일반의        일반의  ...          소계          소계   \n",
        "2         증감률       원데이터  전년말분기 대비 증감        증감률  ...         증감률        원데이터   \n",
        "3         NaN       5309          NaN        NaN  ...         NaN       46871   \n",
@@ -654,8 +633,8 @@
        "19        NaN        439          NaN        NaN  ...         NaN        3029   \n",
        "20        NaN         79          NaN        NaN  ...         NaN         598   \n",
        "\n",
-       "    2022.4/4.58 2022.4/4.59 2022.4/4.60  2022.4/4.61 2022.4/4.62 2022.4/4.63  \\\n",
-       "0         물리치료사       물리치료사       작업치료사        작업치료사       작업치료사       사회복지사   \n",
+       "    2022.4/4.58 2022.4/4.59 2022.4/4.60  2022.4/4.61 2022.4/4.62 2022.4/4.63   \n",
+       "0         물리치료사       물리치료사       작업치료사        작업치료사       작업치료사       사회복지사  \\\n",
        "1            소계          소계          소계           소계          소계          소계   \n",
        "2   전년말분기 대비 증감         증감률        원데이터  전년말분기 대비 증감         증감률        원데이터   \n",
        "3           NaN         NaN        8242          NaN         NaN        4319   \n",
@@ -703,7 +682,7 @@
        "[21 rows x 1270 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1032,8 +1011,8 @@
        "</div>"
       ],
       "text/plain": [
-       "                  0        1            2       3      4      5      6   \\\n",
-       "시군구별(1)      시군구별(1)  시군구별(1)      시군구별(1)      전체     서울     부산     대구   \n",
+       "                  0        1            2       3      4      5      6    \n",
+       "시군구별(1)      시군구별(1)  시군구별(1)      시군구별(1)      전체     서울     부산     대구  \\\n",
        "2018.1/4          전체       소계         원데이터  232211  58433  17667  12658   \n",
        "2018.1/4.1        전체       소계  전년말분기 대비 증감     NaN    NaN    NaN    NaN   \n",
        "2018.1/4.2        전체       소계          증감률     NaN    NaN    NaN    NaN   \n",
@@ -1045,8 +1024,8 @@
        "2022.4/4.64    사회복지사       소계  전년말분기 대비 증감     NaN    NaN    NaN    NaN   \n",
        "2022.4/4.65    사회복지사       소계          증감률     NaN    NaN    NaN    NaN   \n",
        "\n",
-       "                7     8     9   ...   11     12    13    14    15    16    17  \\\n",
-       "시군구별(1)         인천    광주    대전  ...   세종     경기    강원    충북    충남    전북    전남   \n",
+       "                7     8     9   ...   11     12    13    14    15    16    17   \n",
+       "시군구별(1)         인천    광주    대전  ...   세종     경기    강원    충북    충남    전북    전남  \\\n",
        "2018.1/4     11578  8342  8247  ...  745  48465  5841  6193  7821  8911  7908   \n",
        "2018.1/4.1     NaN   NaN   NaN  ...  NaN    NaN   NaN   NaN   NaN   NaN   NaN   \n",
        "2018.1/4.2     NaN   NaN   NaN  ...  NaN    NaN   NaN   NaN   NaN   NaN   NaN   \n",
@@ -1074,147 +1053,13 @@
        "[1270 rows x 21 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "i.iloc[2] == \"원데이터\"\n",
     "i.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>시군구별(1)</th>\n",
-       "      <th>2018.1/4</th>\n",
-       "      <th>2018.1/4.1</th>\n",
-       "      <th>2018.1/4.2</th>\n",
-       "      <th>2018.1/4.3</th>\n",
-       "      <th>2018.1/4.4</th>\n",
-       "      <th>2018.1/4.5</th>\n",
-       "      <th>2018.1/4.6</th>\n",
-       "      <th>2018.1/4.7</th>\n",
-       "      <th>2018.1/4.8</th>\n",
-       "      <th>...</th>\n",
-       "      <th>2022.4/4.56</th>\n",
-       "      <th>2022.4/4.57</th>\n",
-       "      <th>2022.4/4.58</th>\n",
-       "      <th>2022.4/4.59</th>\n",
-       "      <th>2022.4/4.60</th>\n",
-       "      <th>2022.4/4.61</th>\n",
-       "      <th>2022.4/4.62</th>\n",
-       "      <th>2022.4/4.63</th>\n",
-       "      <th>2022.4/4.64</th>\n",
-       "      <th>2022.4/4.65</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>시군구별(1)</td>\n",
-       "      <td>전체</td>\n",
-       "      <td>전체</td>\n",
-       "      <td>전체</td>\n",
-       "      <td>의사</td>\n",
-       "      <td>의사</td>\n",
-       "      <td>의사</td>\n",
-       "      <td>의사</td>\n",
-       "      <td>의사</td>\n",
-       "      <td>의사</td>\n",
-       "      <td>...</td>\n",
-       "      <td>한약사</td>\n",
-       "      <td>물리치료사</td>\n",
-       "      <td>물리치료사</td>\n",
-       "      <td>물리치료사</td>\n",
-       "      <td>작업치료사</td>\n",
-       "      <td>작업치료사</td>\n",
-       "      <td>작업치료사</td>\n",
-       "      <td>사회복지사</td>\n",
-       "      <td>사회복지사</td>\n",
-       "      <td>사회복지사</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>시군구별(1)</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>일반의</td>\n",
-       "      <td>일반의</td>\n",
-       "      <td>일반의</td>\n",
-       "      <td>...</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "      <td>소계</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2 rows × 1270 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   시군구별(1) 2018.1/4 2018.1/4.1 2018.1/4.2 2018.1/4.3 2018.1/4.4 2018.1/4.5  \\\n",
-       "0  시군구별(1)       전체         전체         전체         의사         의사         의사   \n",
-       "1  시군구별(1)       소계         소계         소계         소계         소계         소계   \n",
-       "\n",
-       "  2018.1/4.6 2018.1/4.7 2018.1/4.8  ... 2022.4/4.56 2022.4/4.57 2022.4/4.58  \\\n",
-       "0         의사         의사         의사  ...         한약사       물리치료사       물리치료사   \n",
-       "1        일반의        일반의        일반의  ...          소계          소계          소계   \n",
-       "\n",
-       "  2022.4/4.59 2022.4/4.60 2022.4/4.61 2022.4/4.62 2022.4/4.63 2022.4/4.64  \\\n",
-       "0       물리치료사       작업치료사       작업치료사       작업치료사       사회복지사       사회복지사   \n",
-       "1          소계          소계          소계          소계          소계          소계   \n",
-       "\n",
-       "  2022.4/4.65  \n",
-       "0       사회복지사  \n",
-       "1          소계  \n",
-       "\n",
-       "[2 rows x 1270 columns]"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "column = i.loc[:1]\n",
-    "column"
    ]
   },
   {
@@ -1222,7 +1067,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "trgefwd"
+   ]
   }
  ],
  "metadata": {
@@ -1241,7 +1088,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
