전력량 결측치 처리

--- a/project_2_file/z_ssh/data/코스피 데이터/시각화.ipynb
+++ b/project_2_file/z_ssh/data/코스피 데이터/시각화.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "import numpy as np\n",
     "import platform\n",
     "# 정규식\n",
-    "import re\n"
+    "import re\n",
+    "import folium"
    ]
   },
   {
@@ -619,6 +620,86 @@
    ],
    "source": [
     "usage[['customer', 'wh', 'kwh']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "DriverError",
+     "evalue": "../data/LSMD_ADM_SECT_UMD_41.shp: No such file or directory",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mCPLE_OpenFailedError\u001b[0m                      Traceback (most recent call last)",
+      "File \u001b[1;32mfiona\\ogrext.pyx:136\u001b[0m, in \u001b[0;36mfiona.ogrext.gdal_open_vector\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mfiona\\_err.pyx:291\u001b[0m, in \u001b[0;36mfiona._err.exc_wrap_pointer\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mCPLE_OpenFailedError\u001b[0m: ../data/LSMD_ADM_SECT_UMD_41.shp: No such file or directory",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mDriverError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgeopandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mgpd\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m EMD \u001b[39m=\u001b[39m gpd\u001b[39m.\u001b[39;49mread_file(\u001b[39m'\u001b[39;49m\u001b[39m../data/LSMD_ADM_SECT_UMD_41.shp\u001b[39;49m\u001b[39m'\u001b[39;49m, encoding\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mcp949\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m      3\u001b[0m EMD\u001b[39m.\u001b[39mhead()\n\u001b[0;32m      5\u001b[0m \u001b[39m# 용인시의 행정구역 코드는 4146\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\ssh\\anaconda3\\lib\\site-packages\\geopandas\\io\\file.py:259\u001b[0m, in \u001b[0;36m_read_file\u001b[1;34m(filename, bbox, mask, rows, engine, **kwargs)\u001b[0m\n\u001b[0;32m    256\u001b[0m     path_or_bytes \u001b[39m=\u001b[39m filename\n\u001b[0;32m    258\u001b[0m \u001b[39mif\u001b[39;00m engine \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mfiona\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m--> 259\u001b[0m     \u001b[39mreturn\u001b[39;00m _read_file_fiona(\n\u001b[0;32m    260\u001b[0m         path_or_bytes, from_bytes, bbox\u001b[39m=\u001b[39mbbox, mask\u001b[39m=\u001b[39mmask, rows\u001b[39m=\u001b[39mrows, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs\n\u001b[0;32m    261\u001b[0m     )\n\u001b[0;32m    262\u001b[0m \u001b[39melif\u001b[39;00m engine \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mpyogrio\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m    263\u001b[0m     \u001b[39mreturn\u001b[39;00m _read_file_pyogrio(\n\u001b[0;32m    264\u001b[0m         path_or_bytes, bbox\u001b[39m=\u001b[39mbbox, mask\u001b[39m=\u001b[39mmask, rows\u001b[39m=\u001b[39mrows, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs\n\u001b[0;32m    265\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\ssh\\anaconda3\\lib\\site-packages\\geopandas\\io\\file.py:303\u001b[0m, in \u001b[0;36m_read_file_fiona\u001b[1;34m(path_or_bytes, from_bytes, bbox, mask, rows, where, **kwargs)\u001b[0m\n\u001b[0;32m    300\u001b[0m     reader \u001b[39m=\u001b[39m fiona\u001b[39m.\u001b[39mopen\n\u001b[0;32m    302\u001b[0m \u001b[39mwith\u001b[39;00m fiona_env():\n\u001b[1;32m--> 303\u001b[0m     \u001b[39mwith\u001b[39;00m reader(path_or_bytes, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs) \u001b[39mas\u001b[39;00m features:\n\u001b[0;32m    304\u001b[0m         crs \u001b[39m=\u001b[39m features\u001b[39m.\u001b[39mcrs_wkt\n\u001b[0;32m    305\u001b[0m         \u001b[39m# attempt to get EPSG code\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\ssh\\anaconda3\\lib\\site-packages\\fiona\\env.py:457\u001b[0m, in \u001b[0;36mensure_env_with_credentials.<locals>.wrapper\u001b[1;34m(*args, **kwds)\u001b[0m\n\u001b[0;32m    454\u001b[0m     session \u001b[39m=\u001b[39m DummySession()\n\u001b[0;32m    456\u001b[0m \u001b[39mwith\u001b[39;00m env_ctor(session\u001b[39m=\u001b[39msession):\n\u001b[1;32m--> 457\u001b[0m     \u001b[39mreturn\u001b[39;00m f(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwds)\n",
+      "File \u001b[1;32mc:\\Users\\ssh\\anaconda3\\lib\\site-packages\\fiona\\__init__.py:353\u001b[0m, in \u001b[0;36mopen\u001b[1;34m(fp, mode, driver, schema, crs, encoding, layer, vfs, enabled_drivers, crs_wkt, allow_unsupported_drivers, **kwargs)\u001b[0m\n\u001b[0;32m    350\u001b[0m     path \u001b[39m=\u001b[39m parse_path(fp)\n\u001b[0;32m    352\u001b[0m \u001b[39mif\u001b[39;00m mode \u001b[39min\u001b[39;00m (\u001b[39m\"\u001b[39m\u001b[39ma\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m--> 353\u001b[0m     colxn \u001b[39m=\u001b[39m Collection(\n\u001b[0;32m    354\u001b[0m         path,\n\u001b[0;32m    355\u001b[0m         mode,\n\u001b[0;32m    356\u001b[0m         driver\u001b[39m=\u001b[39mdriver,\n\u001b[0;32m    357\u001b[0m         encoding\u001b[39m=\u001b[39mencoding,\n\u001b[0;32m    358\u001b[0m         layer\u001b[39m=\u001b[39mlayer,\n\u001b[0;32m    359\u001b[0m         enabled_drivers\u001b[39m=\u001b[39menabled_drivers,\n\u001b[0;32m    360\u001b[0m         allow_unsupported_drivers\u001b[39m=\u001b[39mallow_unsupported_drivers,\n\u001b[0;32m    361\u001b[0m         \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs\n\u001b[0;32m    362\u001b[0m     )\n\u001b[0;32m    363\u001b[0m \u001b[39melif\u001b[39;00m mode \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m    364\u001b[0m     colxn \u001b[39m=\u001b[39m Collection(\n\u001b[0;32m    365\u001b[0m         path,\n\u001b[0;32m    366\u001b[0m         mode,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    375\u001b[0m         \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs\n\u001b[0;32m    376\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\ssh\\anaconda3\\lib\\site-packages\\fiona\\collection.py:243\u001b[0m, in \u001b[0;36mCollection.__init__\u001b[1;34m(self, path, mode, driver, schema, crs, encoding, layer, vsi, archive, enabled_drivers, crs_wkt, ignore_fields, ignore_geometry, include_fields, wkt_version, allow_unsupported_drivers, **kwargs)\u001b[0m\n\u001b[0;32m    241\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmode \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m    242\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msession \u001b[39m=\u001b[39m Session()\n\u001b[1;32m--> 243\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msession\u001b[39m.\u001b[39mstart(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    244\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmode \u001b[39min\u001b[39;00m (\u001b[39m\"\u001b[39m\u001b[39ma\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m    245\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msession \u001b[39m=\u001b[39m WritingSession()\n",
+      "File \u001b[1;32mfiona\\ogrext.pyx:588\u001b[0m, in \u001b[0;36mfiona.ogrext.Session.start\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mfiona\\ogrext.pyx:143\u001b[0m, in \u001b[0;36mfiona.ogrext.gdal_open_vector\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mDriverError\u001b[0m: ../data/LSMD_ADM_SECT_UMD_41.shp: No such file or directory"
+     ]
+    }
+   ],
+   "source": [
+    "import geopandas as gpd\n",
+    "EMD = gpd.read_file('../data/LSMD_ADM_SECT_UMD_41.shp', encoding='cp949')\n",
+    "EMD.head()\n",
+    "\n",
+    "# 용인시의 행정구역 코드는 4146\n",
+    "yi = EMD[EMD['EMD_CD'].str.startswith('4146')]\n",
+    "yi.head()\n",
+    "\n",
+    "# WGS 84의 좌표계로 변환하여 위도경도 데이터를 생성\n",
+    "yi4326 = yi.to_crs(epsg=4326)\n",
+    "yi4326 = yi4326.sort_values('EMD_NM')\n",
+    "display(yi4326.head(),yi4326.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'state_geo' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m m \u001b[39m=\u001b[39m folium\u001b[39m.\u001b[39mMap(location\u001b[39m=\u001b[39m[\u001b[39m36\u001b[39m, \u001b[39m127\u001b[39m], tiles\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mOpenStreetMap\u001b[39m\u001b[39m\"\u001b[39m, zoom_start\u001b[39m=\u001b[39m\u001b[39m7\u001b[39m)\n\u001b[0;32m      3\u001b[0m m\u001b[39m.\u001b[39mchoropleth(\n\u001b[1;32m----> 4\u001b[0m     geo_data\u001b[39m=\u001b[39mstate_geo,\n\u001b[0;32m      5\u001b[0m     name\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m인구수\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      6\u001b[0m     data\u001b[39m=\u001b[39mstate_data,\n\u001b[0;32m      7\u001b[0m     columns\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39mCODE\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mPOPULATION\u001b[39m\u001b[39m'\u001b[39m],\n\u001b[0;32m      8\u001b[0m     key_on\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mfeature.properties.SIG_CD\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      9\u001b[0m     fill_color\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mYlGn\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     10\u001b[0m     fill_opacity\u001b[39m=\u001b[39m\u001b[39m0.7\u001b[39m,\n\u001b[0;32m     11\u001b[0m     line_opacity\u001b[39m=\u001b[39m\u001b[39m0.3\u001b[39m,\n\u001b[0;32m     12\u001b[0m     color \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mgray\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     13\u001b[0m     legend_name \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mPopulation\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     14\u001b[0m )\n\u001b[0;32m     16\u001b[0m folium\u001b[39m.\u001b[39mLayerControl()\u001b[39m.\u001b[39madd_to(m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'state_geo' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "m = folium.Map(location=[36, 127], tiles=\"OpenStreetMap\", zoom_start=7)\n",
+    "state_geo = 'TL_SCCO_SIG_WGS84.json'\n",
+    "m.choropleth(\n",
+    "    geo_data=state_geo,\n",
+    "    name='인구수',\n",
+    "    data=state_data,\n",
+    "    columns=['CODE', 'POPULATION'],\n",
+    "    key_on='feature.properties.SIG_CD',\n",
+    "    fill_color='YlGn',\n",
+    "    fill_opacity=0.7,\n",
+    "    line_opacity=0.3,\n",
+    "    color = 'gray',\n",
+    "    legend_name = 'Population'\n",
+    ")\n",
+    "\n",
+    "folium.LayerControl().add_to(m)"
    ]
   },
   {
