--- a/project_2_file/z_ssh/data/전력 데이터/usage.ipynb
+++ b/project_2_file/z_ssh/data/전력 데이터/usage.ipynb
@@ -5197,7 +5197,455 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('전력 사용량 8차.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['연도', '시도', '1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월',\n",
+       "       '11월', '12월'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_T = data[['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월',\n",
+    "       '11월', '12월']].T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>192</th>\n",
+       "      <th>193</th>\n",
+       "      <th>194</th>\n",
+       "      <th>195</th>\n",
+       "      <th>196</th>\n",
+       "      <th>197</th>\n",
+       "      <th>198</th>\n",
+       "      <th>199</th>\n",
+       "      <th>200</th>\n",
+       "      <th>201</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1월</th>\n",
+       "      <td>1480180</td>\n",
+       "      <td>8725482</td>\n",
+       "      <td>2922775</td>\n",
+       "      <td>3743904</td>\n",
+       "      <td>712924</td>\n",
+       "      <td>1331473</td>\n",
+       "      <td>826373</td>\n",
+       "      <td>1848492</td>\n",
+       "      <td>4398183</td>\n",
+       "      <td>2259608</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1862279541</td>\n",
+       "      <td>4400410295</td>\n",
+       "      <td>334175873</td>\n",
+       "      <td>2943785014</td>\n",
+       "      <td>2258624004</td>\n",
+       "      <td>2844658203</td>\n",
+       "      <td>1997136384</td>\n",
+       "      <td>518257588</td>\n",
+       "      <td>4434196207</td>\n",
+       "      <td>2596409187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2월</th>\n",
+       "      <td>1382020</td>\n",
+       "      <td>8341902</td>\n",
+       "      <td>2719682</td>\n",
+       "      <td>3471888</td>\n",
+       "      <td>682498</td>\n",
+       "      <td>1269135</td>\n",
+       "      <td>778458</td>\n",
+       "      <td>1731722</td>\n",
+       "      <td>4168168</td>\n",
+       "      <td>2042581</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1762335099</td>\n",
+       "      <td>4134045439</td>\n",
+       "      <td>304009818</td>\n",
+       "      <td>2646795068</td>\n",
+       "      <td>2089430881</td>\n",
+       "      <td>2738900197</td>\n",
+       "      <td>1830234267</td>\n",
+       "      <td>503323648</td>\n",
+       "      <td>4039445323</td>\n",
+       "      <td>2373601172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3월</th>\n",
+       "      <td>1308429</td>\n",
+       "      <td>7574084</td>\n",
+       "      <td>2648326</td>\n",
+       "      <td>3484251</td>\n",
+       "      <td>632293</td>\n",
+       "      <td>1172936</td>\n",
+       "      <td>716986</td>\n",
+       "      <td>1635276</td>\n",
+       "      <td>3624186</td>\n",
+       "      <td>2179708</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1656492351</td>\n",
+       "      <td>3550750792</td>\n",
+       "      <td>296000438</td>\n",
+       "      <td>2812601189</td>\n",
+       "      <td>2021302298</td>\n",
+       "      <td>2724004606</td>\n",
+       "      <td>1771152739</td>\n",
+       "      <td>450804603</td>\n",
+       "      <td>4077386549</td>\n",
+       "      <td>2344911299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4월</th>\n",
+       "      <td>1317499</td>\n",
+       "      <td>7727001</td>\n",
+       "      <td>2665253</td>\n",
+       "      <td>3454660</td>\n",
+       "      <td>642843</td>\n",
+       "      <td>1199557</td>\n",
+       "      <td>724076</td>\n",
+       "      <td>1682021</td>\n",
+       "      <td>3719082</td>\n",
+       "      <td>2170165</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1654340297</td>\n",
+       "      <td>3449256707</td>\n",
+       "      <td>287523780</td>\n",
+       "      <td>2716613981</td>\n",
+       "      <td>1952160578</td>\n",
+       "      <td>2670493390</td>\n",
+       "      <td>1725471485</td>\n",
+       "      <td>461822944</td>\n",
+       "      <td>3876573166</td>\n",
+       "      <td>2274004059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5월</th>\n",
+       "      <td>1185530</td>\n",
+       "      <td>7156767</td>\n",
+       "      <td>2453568</td>\n",
+       "      <td>3321968</td>\n",
+       "      <td>603935</td>\n",
+       "      <td>1100160</td>\n",
+       "      <td>664428</td>\n",
+       "      <td>1571566</td>\n",
+       "      <td>3426951</td>\n",
+       "      <td>2200352</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1572220858</td>\n",
+       "      <td>3324762948</td>\n",
+       "      <td>275185212</td>\n",
+       "      <td>2682797389</td>\n",
+       "      <td>1904260255</td>\n",
+       "      <td>2722102574</td>\n",
+       "      <td>1667691078</td>\n",
+       "      <td>430958338</td>\n",
+       "      <td>3877528022</td>\n",
+       "      <td>2232679399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6월</th>\n",
+       "      <td>1114450</td>\n",
+       "      <td>7152029</td>\n",
+       "      <td>2429359</td>\n",
+       "      <td>3301601</td>\n",
+       "      <td>605548</td>\n",
+       "      <td>1119186</td>\n",
+       "      <td>684218</td>\n",
+       "      <td>1560178</td>\n",
+       "      <td>3729030</td>\n",
+       "      <td>2165892</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1676954182</td>\n",
+       "      <td>3701620918</td>\n",
+       "      <td>292890410</td>\n",
+       "      <td>2685454196</td>\n",
+       "      <td>2000698177</td>\n",
+       "      <td>2648105312</td>\n",
+       "      <td>1697452622</td>\n",
+       "      <td>437446568</td>\n",
+       "      <td>3770864537</td>\n",
+       "      <td>2283539903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7월</th>\n",
+       "      <td>1055938</td>\n",
+       "      <td>7589292</td>\n",
+       "      <td>2550149</td>\n",
+       "      <td>3344445</td>\n",
+       "      <td>667137</td>\n",
+       "      <td>1202680</td>\n",
+       "      <td>748174</td>\n",
+       "      <td>1675050</td>\n",
+       "      <td>4219590</td>\n",
+       "      <td>2218722</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1861381371</td>\n",
+       "      <td>4406552865</td>\n",
+       "      <td>315298529</td>\n",
+       "      <td>2881832474</td>\n",
+       "      <td>2191296728</td>\n",
+       "      <td>2856349636</td>\n",
+       "      <td>1803462489</td>\n",
+       "      <td>486838482</td>\n",
+       "      <td>4137216305</td>\n",
+       "      <td>2404437392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8월</th>\n",
+       "      <td>1088438</td>\n",
+       "      <td>7961584</td>\n",
+       "      <td>2600386</td>\n",
+       "      <td>3428974</td>\n",
+       "      <td>697066</td>\n",
+       "      <td>1284747</td>\n",
+       "      <td>800784</td>\n",
+       "      <td>1797007</td>\n",
+       "      <td>4646112</td>\n",
+       "      <td>2290022</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2037219364</td>\n",
+       "      <td>5103867603</td>\n",
+       "      <td>339002099</td>\n",
+       "      <td>2911723722</td>\n",
+       "      <td>2387486057</td>\n",
+       "      <td>3073050040</td>\n",
+       "      <td>1923328048</td>\n",
+       "      <td>544309598</td>\n",
+       "      <td>4257399474</td>\n",
+       "      <td>2507863447</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9월</th>\n",
+       "      <td>1058865</td>\n",
+       "      <td>7659696</td>\n",
+       "      <td>2594082</td>\n",
+       "      <td>3394857</td>\n",
+       "      <td>692544</td>\n",
+       "      <td>1267503</td>\n",
+       "      <td>770732</td>\n",
+       "      <td>1806226</td>\n",
+       "      <td>4296100</td>\n",
+       "      <td>2260645</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1842288791</td>\n",
+       "      <td>4145082936</td>\n",
+       "      <td>309351099</td>\n",
+       "      <td>2861562305</td>\n",
+       "      <td>2065171219</td>\n",
+       "      <td>2836764382</td>\n",
+       "      <td>1791056418</td>\n",
+       "      <td>495549015</td>\n",
+       "      <td>3978321724</td>\n",
+       "      <td>2310911637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10월</th>\n",
+       "      <td>1116695</td>\n",
+       "      <td>6868326</td>\n",
+       "      <td>2428098</td>\n",
+       "      <td>3370268</td>\n",
+       "      <td>605233</td>\n",
+       "      <td>1080432</td>\n",
+       "      <td>668362</td>\n",
+       "      <td>1571374</td>\n",
+       "      <td>3441549</td>\n",
+       "      <td>2168811</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1680884736</td>\n",
+       "      <td>3578614014</td>\n",
+       "      <td>286700993</td>\n",
+       "      <td>2797169611</td>\n",
+       "      <td>1925023203</td>\n",
+       "      <td>2726494702</td>\n",
+       "      <td>1679463621</td>\n",
+       "      <td>446948566</td>\n",
+       "      <td>3855222164</td>\n",
+       "      <td>2232922651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11월</th>\n",
+       "      <td>1297575</td>\n",
+       "      <td>7866013</td>\n",
+       "      <td>2623317</td>\n",
+       "      <td>3498295</td>\n",
+       "      <td>632721</td>\n",
+       "      <td>1164842</td>\n",
+       "      <td>705397</td>\n",
+       "      <td>1616403</td>\n",
+       "      <td>3603223</td>\n",
+       "      <td>2219654</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1674216347</td>\n",
+       "      <td>3537141085</td>\n",
+       "      <td>297290104</td>\n",
+       "      <td>2746286184</td>\n",
+       "      <td>1946416596</td>\n",
+       "      <td>2679717505</td>\n",
+       "      <td>1736069147</td>\n",
+       "      <td>438178823</td>\n",
+       "      <td>4108694249</td>\n",
+       "      <td>2333918250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12월</th>\n",
+       "      <td>1442404</td>\n",
+       "      <td>8452695</td>\n",
+       "      <td>2914222</td>\n",
+       "      <td>3773932</td>\n",
+       "      <td>685316</td>\n",
+       "      <td>1287342</td>\n",
+       "      <td>779416</td>\n",
+       "      <td>1768368</td>\n",
+       "      <td>4022925</td>\n",
+       "      <td>2339537</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1787220313</td>\n",
+       "      <td>3963699538</td>\n",
+       "      <td>957934330</td>\n",
+       "      <td>2906501854</td>\n",
+       "      <td>2159324394</td>\n",
+       "      <td>2966245613</td>\n",
+       "      <td>1864342395</td>\n",
+       "      <td>473291448</td>\n",
+       "      <td>4388778130</td>\n",
+       "      <td>2506864235</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12 rows × 202 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         0        1        2        3       4        5       6        7    \\\n",
+       "1월   1480180  8725482  2922775  3743904  712924  1331473  826373  1848492   \n",
+       "2월   1382020  8341902  2719682  3471888  682498  1269135  778458  1731722   \n",
+       "3월   1308429  7574084  2648326  3484251  632293  1172936  716986  1635276   \n",
+       "4월   1317499  7727001  2665253  3454660  642843  1199557  724076  1682021   \n",
+       "5월   1185530  7156767  2453568  3321968  603935  1100160  664428  1571566   \n",
+       "6월   1114450  7152029  2429359  3301601  605548  1119186  684218  1560178   \n",
+       "7월   1055938  7589292  2550149  3344445  667137  1202680  748174  1675050   \n",
+       "8월   1088438  7961584  2600386  3428974  697066  1284747  800784  1797007   \n",
+       "9월   1058865  7659696  2594082  3394857  692544  1267503  770732  1806226   \n",
+       "10월  1116695  6868326  2428098  3370268  605233  1080432  668362  1571374   \n",
+       "11월  1297575  7866013  2623317  3498295  632721  1164842  705397  1616403   \n",
+       "12월  1442404  8452695  2914222  3773932  685316  1287342  779416  1768368   \n",
+       "\n",
+       "         8        9    ...         192         193        194         195  \\\n",
+       "1월   4398183  2259608  ...  1862279541  4400410295  334175873  2943785014   \n",
+       "2월   4168168  2042581  ...  1762335099  4134045439  304009818  2646795068   \n",
+       "3월   3624186  2179708  ...  1656492351  3550750792  296000438  2812601189   \n",
+       "4월   3719082  2170165  ...  1654340297  3449256707  287523780  2716613981   \n",
+       "5월   3426951  2200352  ...  1572220858  3324762948  275185212  2682797389   \n",
+       "6월   3729030  2165892  ...  1676954182  3701620918  292890410  2685454196   \n",
+       "7월   4219590  2218722  ...  1861381371  4406552865  315298529  2881832474   \n",
+       "8월   4646112  2290022  ...  2037219364  5103867603  339002099  2911723722   \n",
+       "9월   4296100  2260645  ...  1842288791  4145082936  309351099  2861562305   \n",
+       "10월  3441549  2168811  ...  1680884736  3578614014  286700993  2797169611   \n",
+       "11월  3603223  2219654  ...  1674216347  3537141085  297290104  2746286184   \n",
+       "12월  4022925  2339537  ...  1787220313  3963699538  957934330  2906501854   \n",
+       "\n",
+       "            196         197         198        199         200         201  \n",
+       "1월   2258624004  2844658203  1997136384  518257588  4434196207  2596409187  \n",
+       "2월   2089430881  2738900197  1830234267  503323648  4039445323  2373601172  \n",
+       "3월   2021302298  2724004606  1771152739  450804603  4077386549  2344911299  \n",
+       "4월   1952160578  2670493390  1725471485  461822944  3876573166  2274004059  \n",
+       "5월   1904260255  2722102574  1667691078  430958338  3877528022  2232679399  \n",
+       "6월   2000698177  2648105312  1697452622  437446568  3770864537  2283539903  \n",
+       "7월   2191296728  2856349636  1803462489  486838482  4137216305  2404437392  \n",
+       "8월   2387486057  3073050040  1923328048  544309598  4257399474  2507863447  \n",
+       "9월   2065171219  2836764382  1791056418  495549015  3978321724  2310911637  \n",
+       "10월  1925023203  2726494702  1679463621  446948566  3855222164  2232922651  \n",
+       "11월  1946416596  2679717505  1736069147  438178823  4108694249  2333918250  \n",
+       "12월  2159324394  2966245613  1864342395  473291448  4388778130  2506864235  \n",
+       "\n",
+       "[12 rows x 202 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('전력 사용량 8차_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -5473,13 +5921,53 @@
        "[202 rows x 14 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.read_csv('전력 사용량 8차.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col = df['시도'] == \"세종특별자치시\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      False\n",
+       "1      False\n",
+       "2      False\n",
+       "3      False\n",
+       "4      False\n",
+       "       ...  \n",
+       "199    False\n",
+       "200    False\n",
+       "201    False\n",
+       "202    False\n",
+       "203    False\n",
+       "Name: 시도, Length: 204, dtype: bool"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col"
    ]
   },
   {
