--- a/project_2_file/waj.py/주택매매가격변동률/주택매매가격변동률.ipynb
+++ b/project_2_file/waj.py/주택매매가격변동률/주택매매가격변동률.ipynb
@@ -2,25 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"201001_202112_월별_시도별_주택매매가격변동률.csv\", encoding=\"cp949\")"
+    "data = pd.read_csv(\"201001_202112_월별_시도별_주택매매가격변동률.csv\",encoding=\"cp949\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +570,7 @@
        "[18 rows x 145 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,12 +578,6 @@
    "source": [
     "data"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
