--- a/project_2_file/waj.py/지방세 데이터 수집/연도별지방세비중.ipynb
+++ b/project_2_file/waj.py/지방세 데이터 수집/연도별지방세비중.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, 25)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +691,7 @@
        "[20 rows x 25 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,6 +699,333 @@
    "source": [
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1 = data.drop(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>시도별(1)</th>\n",
+       "      <th>2010</th>\n",
+       "      <th>2010.1</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>2011.1</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2012.1</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2013.1</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2017.1</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2018.1</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2019.1</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>2020.1</th>\n",
+       "      <th>2021</th>\n",
+       "      <th>2021.1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>시도별(1)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>...</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>서울</td>\n",
+       "      <td>12074840</td>\n",
+       "      <td>22.3</td>\n",
+       "      <td>12913964</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>13436966</td>\n",
+       "      <td>24.9</td>\n",
+       "      <td>12980600</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>14502519</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19296437</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>20695311</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>22268213</td>\n",
+       "      <td>24.6</td>\n",
+       "      <td>25531987</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>28382503</td>\n",
+       "      <td>25.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>지방계</td>\n",
+       "      <td>37084965</td>\n",
+       "      <td>-</td>\n",
+       "      <td>39386180</td>\n",
+       "      <td>-</td>\n",
+       "      <td>40501098</td>\n",
+       "      <td>-</td>\n",
+       "      <td>40798280</td>\n",
+       "      <td>-</td>\n",
+       "      <td>47222494</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>부산</td>\n",
+       "      <td>3062239</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>3352687</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>3386162</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>3401445</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>3973205</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4947208</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>4935112</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>5191892</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>6199573</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>6468033</td>\n",
+       "      <td>5.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>대구</td>\n",
+       "      <td>1818648</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1924374</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>2073421</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>2148115</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2591818</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3156682</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>3227882</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>3476077</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>3959389</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>4246517</td>\n",
+       "      <td>3.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   시도별(1)      2010  2010.1      2011  2011.1      2012  2012.1      2013   \n",
+       "0  시도별(1)  금액 (백만원)  비중 (%)  금액 (백만원)  비중 (%)  금액 (백만원)  비중 (%)  금액 (백만원)  \\\n",
+       "2      서울  12074840    22.3  12913964    24.0  13436966    24.9  12980600   \n",
+       "3     지방계  37084965       -  39386180       -  40501098       -  40798280   \n",
+       "4      부산   3062239     5.7   3352687     6.2   3386162     6.3   3401445   \n",
+       "5      대구   1818648     3.4   1924374     3.6   2073421     3.8   2148115   \n",
+       "\n",
+       "   2013.1      2014  ...      2017  2017.1      2018  2018.1      2019   \n",
+       "0  비중 (%)  금액 (백만원)  ...  금액 (백만원)  비중 (%)  금액 (백만원)  비중 (%)  금액 (백만원)  \\\n",
+       "2    24.1  14502519  ...  19296437    24.0  20695311    24.5  22268213   \n",
+       "3       -  47222494  ...         -       -         -       -         -   \n",
+       "4     6.3   3973205  ...   4947208     6.2   4935112     6.0   5191892   \n",
+       "5     4.0   2591818  ...   3156682     3.9   3227882     3.8   3476077   \n",
+       "\n",
+       "   2019.1      2020  2020.1      2021  2021.1  \n",
+       "0  비중 (%)  금액 (백만원)  비중 (%)  금액 (백만원)  비중 (%)  \n",
+       "2    24.6  25531987    25.0  28382503    25.2  \n",
+       "3       -         -       -         -       -  \n",
+       "4     5.7   6199573     6.1   6468033     5.7  \n",
+       "5     3.9   3959389     3.9   4246517     3.8  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>시도별(1)</th>\n",
+       "      <th>2010</th>\n",
+       "      <th>2010.1</th>\n",
+       "      <th>2011</th>\n",
+       "      <th>2011.1</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2012.1</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2013.1</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2017.1</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2018.1</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2019.1</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>2020.1</th>\n",
+       "      <th>2021</th>\n",
+       "      <th>2021.1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>시도별(1)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>...</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "      <td>금액 (백만원)</td>\n",
+       "      <td>비중 (%)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   시도별(1)      2010  2010.1      2011  2011.1      2012  2012.1      2013   \n",
+       "0  시도별(1)  금액 (백만원)  비중 (%)  금액 (백만원)  비중 (%)  금액 (백만원)  비중 (%)  금액 (백만원)  \\\n",
+       "\n",
+       "   2013.1      2014  ...      2017  2017.1      2018  2018.1      2019   \n",
+       "0  비중 (%)  금액 (백만원)  ...  금액 (백만원)  비중 (%)  금액 (백만원)  비중 (%)  금액 (백만원)  \\\n",
+       "\n",
+       "   2019.1      2020  2020.1      2021  2021.1  \n",
+       "0  비중 (%)  금액 (백만원)  비중 (%)  금액 (백만원)  비중 (%)  \n",
+       "\n",
+       "[1 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data2 = data.loc[0::26]\n",
+    "data2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
