전력 사용량 13차

--- a/project_2_file/z_ssh/data/전력 데이터/usage_filter.ipynb
+++ b/project_2_file/z_ssh/data/전력 데이터/usage_filter.ipynb
@@ -486,6 +486,157 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>연도</th>\n",
+       "      <th>시도</th>\n",
+       "      <th>월</th>\n",
+       "      <th>사용량</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>강원도</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1480180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>경기도</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8725482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>경상남도</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2922775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>경상북도</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3743904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>광주광역시</td>\n",
+       "      <td>1</td>\n",
+       "      <td>712924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2443</th>\n",
+       "      <td>2443</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>전라남도</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2966246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2444</th>\n",
+       "      <td>2444</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>전라북도</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1864342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2445</th>\n",
+       "      <td>2445</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>제주특별자치도</td>\n",
+       "      <td>12</td>\n",
+       "      <td>473291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2446</th>\n",
+       "      <td>2446</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>충청남도</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4388778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2447</th>\n",
+       "      <td>2447</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>충청북도</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2506864</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2448 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0    연도       시도   월      사용량\n",
+       "0              0  2010      강원도   1  1480180\n",
+       "1              1  2010      경기도   1  8725482\n",
+       "2              2  2010     경상남도   1  2922775\n",
+       "3              3  2010     경상북도   1  3743904\n",
+       "4              4  2010    광주광역시   1   712924\n",
+       "...          ...   ...      ...  ..      ...\n",
+       "2443        2443  2021     전라남도  12  2966246\n",
+       "2444        2444  2021     전라북도  12  1864342\n",
+       "2445        2445  2021  제주특별자치도  12   473291\n",
+       "2446        2446  2021     충청남도  12  4388778\n",
+       "2447        2447  2021     충청북도  12  2506864\n",
+       "\n",
+       "[2448 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
