--- a/project_2_file/z_ssh/data/전력 데이터/전력_데이터_시각화.ipynb
+++ b/project_2_file/z_ssh/data/전력 데이터/전력_데이터_시각화.ipynb
@@ -861,9 +861,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kepco_dbc",
+   "display_name": "base",
    "language": "python",
-   "name": "kepco_dbc"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
