전력 데이터 단위 제거

--- a/project_2_file/public_files/전력 사용량/usage_lsit.ipynb
+++ b/project_2_file/public_files/전력 사용량/usage_lsit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "[22080 rows x 17 columns]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        "[21976 rows x 17 columns]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1033,7 @@
        "[21976 rows x 17 columns]"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -1075,7 +1075,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
        "[2748 rows x 16 columns]"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1549,7 @@
        "[2448 rows x 5 columns]"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1560,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -1661,7 +1661,7 @@
        "      <th>연도</th>\n",
        "      <th>월</th>\n",
        "      <th>시도</th>\n",
-       "      <th>사용량(mwh)</th>\n",
+       "      <th>사용량</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1759,37 +1759,36 @@
        "</div>"
       ],
       "text/plain": [
-       "           년월    연도   월       시도  사용량(mwh)\n",
-       "0      2010.1  2010   1      강원도   1480180\n",
-       "1      2010.1  2010   1      경기도   8725482\n",
-       "2      2010.1  2010   1     경상남도   2922775\n",
-       "3      2010.1  2010   1     경상북도   3743904\n",
-       "4      2010.1  2010   1    광주광역시    712924\n",
-       "...       ...   ...  ..      ...       ...\n",
-       "2443  2021.12  2021  12     전라남도   2966246\n",
-       "2444  2021.12  2021  12     전라북도   1864342\n",
-       "2445  2021.12  2021  12  제주특별자치도    473291\n",
-       "2446  2021.12  2021  12     충청남도   4388778\n",
-       "2447  2021.12  2021  12     충청북도   2506864\n",
+       "           년월    연도   월       시도      사용량\n",
+       "0      2010.1  2010   1      강원도  1480180\n",
+       "1      2010.1  2010   1      경기도  8725482\n",
+       "2      2010.1  2010   1     경상남도  2922775\n",
+       "3      2010.1  2010   1     경상북도  3743904\n",
+       "4      2010.1  2010   1    광주광역시   712924\n",
+       "...       ...   ...  ..      ...      ...\n",
+       "2443  2021.12  2021  12     전라남도  2966246\n",
+       "2444  2021.12  2021  12     전라북도  1864342\n",
+       "2445  2021.12  2021  12  제주특별자치도   473291\n",
+       "2446  2021.12  2021  12     충청남도  4388778\n",
+       "2447  2021.12  2021  12     충청북도  2506864\n",
        "\n",
        "[2448 rows x 5 columns]"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['년월'] = df['연도'] + \".\" + df['월']\n",
-    "df.rename(columns = {'사용량' : '사용량(mwh)'}, inplace=1)\n",
-    "df = df[['년월', '연도', '월', '시도', '사용량(mwh)']]\n",
+    "df = df[['년월', '연도', '월', '시도', '사용량']]\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1798,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1825,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1834,7 +1833,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2448 entries, 0 to 2447\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   년월      2448 non-null   object\n",
+      " 1   연도      2448 non-null   int64 \n",
+      " 2   월       2448 non-null   object\n",
+      " 3   시도      2448 non-null   object\n",
+      " 4   사용량     2448 non-null   int64 \n",
+      "dtypes: int64(2), object(3)\n",
+      "memory usage: 95.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -1862,7 +1889,7 @@
        "      <th>연도</th>\n",
        "      <th>월</th>\n",
        "      <th>시도</th>\n",
-       "      <th>사용량(mwh)</th>\n",
+       "      <th>사용량</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1960,23 +1987,23 @@
        "</div>"
       ],
       "text/plain": [
-       "           년월    연도   월       시도  사용량(mwh)\n",
-       "0      2010.1  2010  01      강원도   1480180\n",
-       "1      2010.1  2010  01      경기도   8725482\n",
-       "2      2010.1  2010  01     경상남도   2922775\n",
-       "3      2010.1  2010  01     경상북도   3743904\n",
-       "4      2010.1  2010  01    광주광역시    712924\n",
-       "...       ...   ...  ..      ...       ...\n",
-       "2443  2021.12  2021  12     전라남도   2966246\n",
-       "2444  2021.12  2021  12     전라북도   1864342\n",
-       "2445  2021.12  2021  12  제주특별자치도    473291\n",
-       "2446  2021.12  2021  12     충청남도   4388778\n",
-       "2447  2021.12  2021  12     충청북도   2506864\n",
+       "           년월    연도   월       시도      사용량\n",
+       "0      2010.1  2010  01      강원도  1480180\n",
+       "1      2010.1  2010  01      경기도  8725482\n",
+       "2      2010.1  2010  01     경상남도  2922775\n",
+       "3      2010.1  2010  01     경상북도  3743904\n",
+       "4      2010.1  2010  01    광주광역시   712924\n",
+       "...       ...   ...  ..      ...      ...\n",
+       "2443  2021.12  2021  12     전라남도  2966246\n",
+       "2444  2021.12  2021  12     전라북도  1864342\n",
+       "2445  2021.12  2021  12  제주특별자치도   473291\n",
+       "2446  2021.12  2021  12     충청남도  4388778\n",
+       "2447  2021.12  2021  12     충청북도  2506864\n",
        "\n",
        "[2448 rows x 5 columns]"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1987,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
