--- a/project_2_file/z_ssh/data/코스피 데이터/시각화.ipynb
+++ b/project_2_file/z_ssh/data/코스피 데이터/시각화.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'plotly'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mplotly\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mgraph_objs\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mgo\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mplotly\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mexpress\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpx\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'plotly'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import seaborn as plt\n",
@@ -35,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,94 +48,46 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Unnamed: 0</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "      <th>temp</th>\n",
-       "      <th>cloud</th>\n",
-       "      <th>rainfall_total</th>\n",
-       "      <th>Humidity_mean</th>\n",
-       "      <th>solar</th>\n",
-       "      <th>customer</th>\n",
-       "      <th>wh</th>\n",
-       "      <th>kwh</th>\n",
+       "      <th>연도</th>\n",
+       "      <th>월</th>\n",
+       "      <th>코스피 평균</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>2021</td>\n",
+       "      <td>2010</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.6</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>83.1</td>\n",
-       "      <td>9.00</td>\n",
-       "      <td>783260</td>\n",
-       "      <td>49968118.15</td>\n",
-       "      <td>11154070.87</td>\n",
+       "      <td>1682.16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
        "      <td>2</td>\n",
-       "      <td>-0.3</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>67.8</td>\n",
-       "      <td>12.54</td>\n",
-       "      <td>783281</td>\n",
-       "      <td>43576388.06</td>\n",
-       "      <td>10820313.94</td>\n",
+       "      <td>1598.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
        "      <td>3</td>\n",
-       "      <td>-0.6</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>54.6</td>\n",
-       "      <td>10.37</td>\n",
-       "      <td>783288</td>\n",
-       "      <td>44345831.21</td>\n",
-       "      <td>10577876.27</td>\n",
+       "      <td>1665.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
        "      <td>4</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>71.8</td>\n",
-       "      <td>10.07</td>\n",
-       "      <td>783288</td>\n",
-       "      <td>49666971.53</td>\n",
-       "      <td>11410542.58</td>\n",
+       "      <td>1730.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
        "      <td>5</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>64.9</td>\n",
-       "      <td>7.74</td>\n",
-       "      <td>783310</td>\n",
-       "      <td>44114435.78</td>\n",
-       "      <td>11097614.74</td>\n",
+       "      <td>1648.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -155,135 +95,72 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>725</th>\n",
-       "      <td>725</td>\n",
+       "      <th>151</th>\n",
+       "      <td>151</td>\n",
        "      <td>2022</td>\n",
-       "      <td>12</td>\n",
-       "      <td>27</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>74.1</td>\n",
-       "      <td>13.08</td>\n",
-       "      <td>800308</td>\n",
-       "      <td>31743683.54</td>\n",
-       "      <td>9442942.40</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2479.57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>726</th>\n",
-       "      <td>726</td>\n",
+       "      <th>152</th>\n",
+       "      <td>152</td>\n",
        "      <td>2022</td>\n",
-       "      <td>12</td>\n",
-       "      <td>28</td>\n",
-       "      <td>-0.2</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>75.4</td>\n",
-       "      <td>9.62</td>\n",
-       "      <td>802036</td>\n",
-       "      <td>32641190.23</td>\n",
-       "      <td>9679363.18</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2333.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>727</th>\n",
-       "      <td>727</td>\n",
+       "      <th>153</th>\n",
+       "      <td>153</td>\n",
        "      <td>2022</td>\n",
-       "      <td>12</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>63.3</td>\n",
-       "      <td>12.25</td>\n",
-       "      <td>803784</td>\n",
-       "      <td>58820056.15</td>\n",
-       "      <td>11754265.48</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2230.27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>728</th>\n",
-       "      <td>728</td>\n",
+       "      <th>154</th>\n",
+       "      <td>154</td>\n",
        "      <td>2022</td>\n",
-       "      <td>12</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>70.4</td>\n",
-       "      <td>9.25</td>\n",
-       "      <td>805066</td>\n",
-       "      <td>52733978.57</td>\n",
-       "      <td>12149583.10</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2417.56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>729</th>\n",
-       "      <td>729</td>\n",
+       "      <th>155</th>\n",
+       "      <td>155</td>\n",
        "      <td>2022</td>\n",
        "      <td>12</td>\n",
-       "      <td>31</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>66.1</td>\n",
-       "      <td>12.02</td>\n",
-       "      <td>805564</td>\n",
-       "      <td>44225974.10</td>\n",
-       "      <td>11472992.97</td>\n",
+       "      <td>2361.28</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>730 rows × 12 columns</p>\n",
+       "<p>156 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Unnamed: 0  year  month  day  temp  cloud  rainfall_total  Humidity_mean  \\\n",
-       "0             0  2021      1    1  -0.6    7.3             0.0           83.1   \n",
-       "1             1  2021      1    2  -0.3    3.8             0.5           67.8   \n",
-       "2             2  2021      1    3  -0.6    7.3             0.0           54.6   \n",
-       "3             3  2021      1    4   1.2    3.1             0.0           71.8   \n",
-       "4             4  2021      1    5  -0.2    8.0             0.0           64.9   \n",
-       "..          ...   ...    ...  ...   ...    ...             ...            ...   \n",
-       "725         725  2022     12   27   0.3    1.8             0.0           74.1   \n",
-       "726         726  2022     12   28  -0.2    5.3             0.0           75.4   \n",
-       "727         727  2022     12   29   0.7    2.1             0.0           63.3   \n",
-       "728         728  2022     12   30   1.0    6.3             0.0           70.4   \n",
-       "729         729  2022     12   31   1.4    1.4             0.0           66.1   \n",
+       "     Unnamed: 0    연도   월   코스피 평균\n",
+       "0             0  2010   1  1682.16\n",
+       "1             1  2010   2  1598.96\n",
+       "2             2  2010   3  1665.50\n",
+       "3             3  2010   4  1730.29\n",
+       "4             4  2010   5  1648.30\n",
+       "..          ...   ...  ..      ...\n",
+       "151         151  2022   8  2479.57\n",
+       "152         152  2022   9  2333.93\n",
+       "153         153  2022  10  2230.27\n",
+       "154         154  2022  11  2417.56\n",
+       "155         155  2022  12  2361.28\n",
        "\n",
-       "     solar  customer           wh          kwh  \n",
-       "0     9.00    783260  49968118.15  11154070.87  \n",
-       "1    12.54    783281  43576388.06  10820313.94  \n",
-       "2    10.37    783288  44345831.21  10577876.27  \n",
-       "3    10.07    783288  49666971.53  11410542.58  \n",
-       "4     7.74    783310  44114435.78  11097614.74  \n",
-       "..     ...       ...          ...          ...  \n",
-       "725  13.08    800308  31743683.54   9442942.40  \n",
-       "726   9.62    802036  32641190.23   9679363.18  \n",
-       "727  12.25    803784  58820056.15  11754265.48  \n",
-       "728   9.25    805066  52733978.57  12149583.10  \n",
-       "729  12.02    805564  44225974.10  11472992.97  \n",
-       "\n",
-       "[730 rows x 12 columns]"
+       "[156 rows x 4 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('코스피 지수 데이터.csv')\n",
-    "usage = pd.read_csv('usage_by_weather2.csv')\n",
-    "usage.reset_index\n",
-    "usage"
+    "df"
    ]
   },
   {
@@ -371,7 +248,7 @@
     "plt.figure(figsize = (16,3))\n",
     "plt.plot(df[\"코스피 평균\"], marker = 'o', markersize=4)\n",
     "plt.grid(axis='y', linestyle='-', alpha=0.4)\n",
-    "plt.legend(df.columns, \n",
+    "plt.legend(df.columns,\n",
     "           loc='center left', bbox_to_anchor=(1, 0.5)) # 그래프 범례를 그래프 밖에 위치\n",
     "plt.title('2010 ~ 2021 년 코스피')\n",
     "plt.xlabel('')\n",
@@ -724,9 +601,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sprint_kernel",
+   "display_name": "base",
    "language": "python",
-   "name": "sprint2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
